<resources>
    <string name="app_name">FintechApp</string>
    <string name="btnSave">Save</string>
    <string name="btnExtract">Extract</string>
    <string name="btnExit">Exit</string>
    <string name="ivLogo">Fintech Logo</string>
    <string name="tvCadActivityTitle">Save</string>
    <string name="tvResumeCoin">$</string>
    <string name="tvDescription">Description</string>
    <string name="tvDescriptionHint">Type here a description</string>
    <string name="tvValue">Value</string>
    <string name="tvValueHint">Type here a value</string>
    <string name="tvOperation">Operation</string>
    <string name="btnBack">Back</string>
    <string name="messageSaveError">It "isn't" possible to save this financial operation. Please check it!</string>
    <string name="messageSave">"Financial Operation saved successfully!"</string>
    <string name="tvExtractTitle">Extract</string>
    <string name="btnBackExtract">Back</string>
    <string name="tvBalance">Balance:</string>
</resources>