<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="260dp"
        android:layout_height="243dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_marginBaseline="36dp"
        app:srcCompat="@drawable/fintech"
        android:contentDescription="@string/ivLogo"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="262dp"
        android:layout_height="79dp"
        android:text="@string/btnSave"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnExtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <Button
        android:id="@+id/btnExtract"
        android:layout_width="262dp"
        android:layout_height="79dp"
        android:text="@string/btnExtract"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

    <Button
        android:id="@+id/btnSair"
        android:layout_width="262dp"
        android:layout_height="79dp"
        android:backgroundTint="#CCDE0405"
        android:text="@string/btnExit"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExtract"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>